--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="attribution">
+  <div class="qr-code-container">
     <img src="images/image-qr-code.png">
     <div class="description">
       <h2>
@@ -27,10 +27,11 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
     </div>
-
   </div>
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Leo Zarni</a>.
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Leo-Zarni01">Leo Zarni</a>.
+  </div>
 </body>
 
 </html>
