--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -17,21 +17,23 @@
 </head>
 
 <body>
-  <div class="qr-code-container">
-    <img src="images/image-qr-code.png">
-    <div class="description">
-      <h2>
-        Improve your front-end skills by building projects
-      </h2>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+  <section class="content">
+    <div class="qr-code-container">
+      <img src="images/image-qr-code.png" alt="QR code linking to Frontend Mentor challenge page">
+      <div class="description">
+        <h1>
+          Improve your front-end skills by building projects
+        </h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
     </div>
-  </div>
-  <div class="attribution">
+  </section>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/Leo-Zarni01">Leo Zarni</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
